# daylight

./: .gitignore  .readthedocs.yml  CMakeLists.txt  MANIFEST.in  README.md  README_8md.html  Sunclock_8cpp.html  Sunclock_8cpp.js  Sunclock_8cpp__incl.dot  Sunclock_8cpp__incl.md5  Sunclock_8hpp.html  Sunclock_8hpp__dep__incl.dot  Sunclock_8hpp__dep__incl.md5  Sunclock_8hpp__incl.dot  Sunclock_8hpp__incl.md5  Sunclock_8hpp_source.html  _r_e_a_d_m_e_8md.html  _sunclock_8cpp.html  _sunclock_8cpp.js  _sunclock_8hpp.html  _sunclock_8hpp_source.html  annotated.html  annotated_dup.js  classSunclock-members.html  classSunclock.html  classSunclock.js  class_sunclock-members.html  class_sunclock.html  class_sunclock.js  classes.html  dir_000000_000001.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.dot  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.md5  dir_c1a4127a0ddd2d503a155719d4352ad8.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  files.js  files_dup.js  functions.html  (+9 more)
.github/workflows/: coverage.yml  doctests.yml  documentation.yaml  style.yml  tests.yml  wheels.yml
capi/: CMakeLists.txt  daylight.cpp  daylight_c.h
capi/include/daylight/: daylight_c.h
capi/source/: daylight_c.cpp
cmake/: WriteVersionInfo.cmake
docs/: CMakeLists.txt  conf.py  environment.yml  index.rst  reference.rst  similar-libraries.rst
documentation/: CMakeLists.txt
documentation/python/: conf.py  index.rst
examples/: adonmo-daylight-brightness-control.ipynb
include/daylight/: Sunclock.hpp
libdaylight/: CMakeLists.txt
libdaylight/include/libdaylight/: Sunclock.hpp
libdaylight/src/: Sunclock.cpp
pybind/: CMakeLists.txt  pybind.cpp
pybind/include/: daylight.hpp
pybind/source/: daylight.cpp  pybind.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
source/: Sunclock.cpp
test/: CMakeLists.txt
test/python/: requirements.txt  test.py  test_sunclock.py
test/source/: test_irradiance.cpp  test_solar_noon.cpp  test_sunrise.cpp  test_sunset.cpp
test/source/common/: utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_irradiance.cpp  test_solar_noon.cpp  test_sunclock.cpp  test_sunrise.cpp  test_sunset.cpp
tests/common/: constants.h  utils.cpp  utils.hpp
tests/python/: test.py
tools/: write_version_info.py
