[metadata]
name = daylight
version = file: VERSION
author = Krishna Chaitanya Bommakanti
author_email = bkchaitan94@gmail.com
url = https://github.com/adonmo/daylight
license_file = LICENSE
description = Python bindings to libdaylight
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Home Automation
    Topic :: Scientific/Engineering :: GIS
    Topic :: Utilities
keywords = irradiance, sunrise, sunset, sun, geo, gis

[options]
setup_requires =
    pybind11~=2.5
install_requires =
    numpy
zip_safe = false

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    numpydoc
